--- a/web/src/html/docTemplate.html
+++ b/web/src/html/docTemplate.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>PowerNukkit</title>
-    <link rel="stylesheet" type="text/css" href="../css/genshin.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/iconfont/iconfont.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/genshin.css"/>
 </head>
 <body>
     <div class="title-bar">
+        <a class="big-icon genshin-fanhui"></a>
         <p class="title">PowerNukkitX</p>
     </div>
 </body>
