--- a/index.html
+++ b/index.html
@@ -55,7 +55,23 @@
         </div>
         <div class="mdui-row mdui-col-sm-8 mdui-col-xs-12">
             <h1 class="logo-title">PowerNukkitX</h1>
+            <span class="logo-description">
+                <span translate="yes" id="logo-dyn-description">logo-des-0</span>
+                <span translate="yes">logo-des-mcbe-server</span>
+            </span>
         </div>
+    </div>
+    <div class="mdui-row v-space-md"></div>
+    <div class="link-btn-box">
+        <a href="https://doc.powernukkitx.cn" class="mdui-btn mdui-btn-raised mdui-ripple">
+            <i class="mdui-menu-item-icon mdui-icon material-icons">library_books</i>
+            <span translate="yes">more-menu.document</span>
+        </a>
+        <span class="h-space-md"></span>
+        <a href="https://github.com/PowerNukkitX/PowerNukkitX" class="mdui-btn mdui-btn-raised mdui-ripple">
+            <i class="mdui-menu-item-icon mdui-icon material-icons">code</i>
+            <span translate="yes">link.source-code</span>
+        </a>
     </div>
 </div>
 <!-- MDUI Material设计库 -->
