--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="description" lang="zh-cn" content="PowerNukkitX：新一代高性能、富特性、完全独立的开源MCBE服务端软件。">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
     <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no"/>
+    <meta name="renderer" content="webkit"/>
+    <meta name="force-rendering" content="webkit"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title>PowerNukkitX</title>
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/mdui/1.0.2/css/mdui.min.css"
@@ -73,6 +77,65 @@
             <span translate="yes">link.source-code</span>
         </a>
     </div>
+    <div class="mdui-row v-space-md"></div>
+    <hr/>
+    <div class="mdui-row v-space-md"></div>
+    <div class="mdui-row">
+        <h2 class="content-title" translate="yes">text.why-choose-pnx</h2>
+    </div>
+    <div class="mdui-row v-space-md"></div>
+    <div class="mdui-row">
+        <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4">
+            <div class="mdui-card card-bottom-gap">
+                <div class="mdui-card-header">
+                    <img class="mdui-card-header-avatar" src="/web/assets/image/icon/high-performance.svg" alt=""/>
+                    <div class="mdui-card-header-title" translate="yes">text.high-performance</div>
+                    <div class="mdui-card-header-subtitle" translate="yes">text.high-performance.description</div>
+                </div>
+                <div class="mdui-card-content" translate="yes">text.high-performance.content</div>
+            </div>
+        </div>
+        <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4">
+            <div class="mdui-card card-bottom-gap">
+                <div class="mdui-card-header">
+                    <img class="mdui-card-header-avatar" src="/web/assets/image/icon/more-feature.svg" alt=""/>
+                    <div class="mdui-card-header-title" translate="yes">text.more-feature</div>
+                    <div class="mdui-card-header-subtitle" translate="yes">text.more-feature.description</div>
+                </div>
+                <div class="mdui-card-content" translate="yes">text.more-feature.content</div>
+            </div>
+        </div>
+        <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4">
+            <div class="mdui-card card-bottom-gap">
+                <div class="mdui-card-header">
+                    <img class="mdui-card-header-avatar" src="/web/assets/image/icon/and-more.svg" alt=""/>
+                    <div class="mdui-card-header-title" translate="yes">text.and-more</div>
+                    <div class="mdui-card-header-subtitle" translate="yes">text.and-more.description</div>
+                </div>
+                <div class="mdui-card-content" translate="yes">text.and-more.content</div>
+            </div>
+        </div>
+    </div>
+    <div class="mdui-row v-space-md"></div>
+    <hr/>
+    <div class="mdui-row v-space-md"></div>
+    <div class="mdui-row">
+        <h2 class="content-title" translate="yes">text.servers-choice</h2>
+    </div>
+    <div class="mdui-row v-space-md"></div>
+    <div class="mdui-row">
+        <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4">
+            <div class="mdui-card card-bottom-gap">
+                <div class="mdui-card-primary">
+                    <div class="mdui-card-primary-title" id="pnx-server-count">...</div>
+                    <div class="mdui-card-primary-subtitle" translate="yes">text.running-pnx</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="mdui-row v-space-md"></div>
+    <hr/>
+    <div class="mdui-row v-space-md"></div>
 </div>
 <!-- MDUI Material设计库 -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mdui/1.0.2/js/mdui.min.js" crossorigin="anonymous"></script>
