--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <h2 class="content-title" translate="yes">text.why-choose-pnx</h2>
     </div>
     <div class="mdui-row v-space-md"></div>
-    <div class="mdui-row">
+    <div class="mdui-row flex-row">
         <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4">
             <div class="mdui-card card-bottom-gap">
                 <div class="mdui-card-header">
@@ -108,6 +108,36 @@
         <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4">
             <div class="mdui-card card-bottom-gap">
                 <div class="mdui-card-header">
+                    <img class="mdui-card-header-avatar" src="/web/assets/image/icon/plugin.svg" alt=""/>
+                    <div class="mdui-card-header-title" translate="yes">text.massive-plugins</div>
+                    <div class="mdui-card-header-subtitle" translate="yes">text.massive-plugins.description</div>
+                </div>
+                <div class="mdui-card-content" translate="yes">text.massive-plugins.content</div>
+            </div>
+        </div>
+        <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4">
+            <div class="mdui-card card-bottom-gap">
+                <div class="mdui-card-header">
+                    <img class="mdui-card-header-avatar" src="/web/assets/image/icon/command.svg" alt=""/>
+                    <div class="mdui-card-header-title" translate="yes">text.vanilla-command</div>
+                    <div class="mdui-card-header-subtitle" translate="yes">text.vanilla-command.description</div>
+                </div>
+                <div class="mdui-card-content" translate="yes">text.vanilla-command.content</div>
+            </div>
+        </div>
+        <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4">
+            <div class="mdui-card card-bottom-gap">
+                <div class="mdui-card-header">
+                    <img class="mdui-card-header-avatar" src="/web/assets/image/icon/command.svg" alt=""/>
+                    <div class="mdui-card-header-title" translate="yes">text.js-engine</div>
+                    <div class="mdui-card-header-subtitle" translate="yes">text.js-engine.description</div>
+                </div>
+                <div class="mdui-card-content" translate="yes">text.js-engine.content</div>
+            </div>
+        </div>
+        <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4">
+            <div class="mdui-card card-bottom-gap">
+                <div class="mdui-card-header">
                     <img class="mdui-card-header-avatar" src="/web/assets/image/icon/and-more.svg" alt=""/>
                     <div class="mdui-card-header-title" translate="yes">text.and-more</div>
                     <div class="mdui-card-header-subtitle" translate="yes">text.and-more.description</div>
@@ -123,12 +153,22 @@
         <h2 class="content-title" translate="yes">text.servers-choice</h2>
     </div>
     <div class="mdui-row v-space-md"></div>
-    <div class="mdui-row">
+    <div class="mdui-row flex-row">
         <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4">
             <div class="mdui-card card-bottom-gap">
                 <div class="mdui-card-primary">
-                    <div class="mdui-card-primary-title" id="pnx-server-count">...</div>
+                    <div class="mdui-card-primary-title"><span id="pnx-server-count">...</span><span translate="yes">text.servers</span>
+                    </div>
                     <div class="mdui-card-primary-subtitle" translate="yes">text.running-pnx</div>
+                </div>
+            </div>
+        </div>
+        <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4">
+            <div class="mdui-card card-bottom-gap">
+                <div class="mdui-card-primary">
+                    <div class="mdui-card-primary-title"><span id="pnx-star-count">...</span><span translate="yes">stars</span>
+                    </div>
+                    <div class="mdui-card-primary-subtitle" translate="yes">text.on-github</div>
                 </div>
             </div>
         </div>
