修复错误，同时添加了一些小玩意

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="keywords" content="PowerNukkitX,Nukkit,PowerNukkit,NK,PN,PNX,Minecraft,Bedrock,mcbe,server">
     <meta name="description" content="PowerNukkitX：新一代高性能、富特性、完全独立的开源MCBE服务端软件。">
     <meta name="description" lang="zh-cn" content="PowerNukkitX：新一代高性能、富特性、完全独立的开源MCBE服务端软件。">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
-    <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"/>
+    <link rel="icon" href="./favicon.ico" type="image/x-icon"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no"/>
     <meta name="renderer" content="webkit"/>
     <meta name="force-rendering" content="webkit"/>
@@ -15,7 +15,7 @@
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/mdui/1.0.2/css/mdui.min.css"
           crossorigin="anonymous"/>
-    <link rel="stylesheet" href="/web/index/common.css"/>
+    <link rel="stylesheet" href="./web/index/common.css"/>
 </head>
 <body class="mdui-theme-primary-indigo mdui-theme-accent-indigo mdui-appbar-with-toolbar">
 <header class="appbar mdui-appbar mdui-appbar-fixed">
@@ -55,7 +55,7 @@
     <div class="mdui-row">
         <div class="mdui-col-xs-2 mdui-hidden-sm-up"></div>
         <div class="mdui-row mdui-col-sm-4 mdui-col-xs-8">
-            <img src="/web/assets/image/PNX_LOGO_sm.png" class="logo-icon" alt="PNX LOGO"/>
+            <img src="./web/assets/image/PNX_LOGO_sm.png" class="logo-icon" alt="PNX LOGO"/>
         </div>
         <div class="mdui-row mdui-col-sm-8 mdui-col-xs-12">
             <h1 class="logo-title">PowerNukkitX</h1>
@@ -65,6 +65,7 @@
             </span>
         </div>
     </div>
+    <!-- 快捷按钮 -->
     <div class="mdui-row v-space-md"></div>
     <div class="link-btn-box">
         <a href="https://doc.powernukkitx.cn" class="mdui-btn mdui-btn-raised mdui-ripple">
@@ -77,6 +78,7 @@
             <span translate="yes">link.source-code</span>
         </a>
     </div>
+    <!-- PowerNukkitX功能描述 -->
     <div class="mdui-row v-space-md"></div>
     <hr/>
     <div class="mdui-row v-space-md"></div>
@@ -88,7 +90,7 @@
         <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4">
             <div class="mdui-card card-bottom-gap">
                 <div class="mdui-card-header">
-                    <img class="mdui-card-header-avatar" src="/web/assets/image/icon/high-performance.svg" alt=""/>
+                    <img class="mdui-card-header-avatar icon-noradius" src="./web/assets/image/icon/high-performance.svg" alt=""/>
                     <div class="mdui-card-header-title" translate="yes">text.high-performance</div>
                     <div class="mdui-card-header-subtitle" translate="yes">text.high-performance.description</div>
                 </div>
@@ -98,7 +100,7 @@
         <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4">
             <div class="mdui-card card-bottom-gap">
                 <div class="mdui-card-header">
-                    <img class="mdui-card-header-avatar" src="/web/assets/image/icon/more-feature.svg" alt=""/>
+                    <img class="mdui-card-header-avatar icon-noradius" src="./web/assets/image/icon/more-feature.svg" alt=""/>
                     <div class="mdui-card-header-title" translate="yes">text.more-feature</div>
                     <div class="mdui-card-header-subtitle" translate="yes">text.more-feature.description</div>
                 </div>
@@ -108,7 +110,7 @@
         <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4">
             <div class="mdui-card card-bottom-gap">
                 <div class="mdui-card-header">
-                    <img class="mdui-card-header-avatar" src="/web/assets/image/icon/plugin.svg" alt=""/>
+                    <img class="mdui-card-header-avatar icon-noradius" src="./web/assets/image/icon/plugin.svg" alt=""/>
                     <div class="mdui-card-header-title" translate="yes">text.massive-plugins</div>
                     <div class="mdui-card-header-subtitle" translate="yes">text.massive-plugins.description</div>
                 </div>
@@ -118,7 +120,7 @@
         <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4">
             <div class="mdui-card card-bottom-gap">
                 <div class="mdui-card-header">
-                    <img class="mdui-card-header-avatar" src="/web/assets/image/icon/command.svg" alt=""/>
+                    <img class="mdui-card-header-avatar icon-noradius" src="./web/assets/image/icon/command.svg" alt=""/>
                     <div class="mdui-card-header-title" translate="yes">text.vanilla-command</div>
                     <div class="mdui-card-header-subtitle" translate="yes">text.vanilla-command.description</div>
                 </div>
@@ -128,7 +130,7 @@
         <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4">
             <div class="mdui-card card-bottom-gap">
                 <div class="mdui-card-header">
-                    <img class="mdui-card-header-avatar" src="/web/assets/image/icon/command.svg" alt=""/>
+                    <img class="mdui-card-header-avatar icon-noradius" src="./web/assets/image/icon/command.svg" alt=""/>
                     <div class="mdui-card-header-title" translate="yes">text.js-engine</div>
                     <div class="mdui-card-header-subtitle" translate="yes">text.js-engine.description</div>
                 </div>
@@ -138,7 +140,7 @@
         <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4">
             <div class="mdui-card card-bottom-gap">
                 <div class="mdui-card-header">
-                    <img class="mdui-card-header-avatar" src="/web/assets/image/icon/and-more.svg" alt=""/>
+                    <img class="mdui-card-header-avatar icon-noradius" src="./web/assets/image/icon/and-more.svg" alt=""/>
                     <div class="mdui-card-header-title" translate="yes">text.and-more</div>
                     <div class="mdui-card-header-subtitle" translate="yes">text.and-more.description</div>
                 </div>
@@ -146,6 +148,7 @@
             </div>
         </div>
     </div>
+    <!-- 数据统计 -->
     <div class="mdui-row v-space-md"></div>
     <hr/>
     <div class="mdui-row v-space-md"></div>
@@ -180,6 +183,6 @@
 <!-- MDUI Material设计库 -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mdui/1.0.2/js/mdui.min.js" crossorigin="anonymous"></script>
 <!-- PNX主页 JS库 -->
-<script src="/web/index/index.min.js"></script>
+<script src="./web/index/index.min.js"></script>
 </body>
 </html>
