感谢爱发电赞助

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     </div>
     <div class="mdui-row v-space-md"></div>
     <hr/>
+    <!--  优势  -->
     <div class="mdui-row v-space-md"></div>
     <div class="mdui-row">
         <h2 class="content-title" translate="yes">text.why-choose-pnx</h2>
@@ -128,7 +129,7 @@
         <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4">
             <div class="mdui-card card-bottom-gap">
                 <div class="mdui-card-header">
-                    <img class="mdui-card-header-avatar" src="/web/assets/image/icon/command.svg" alt=""/>
+                    <img class="mdui-card-header-avatar" src="/web/assets/image/icon/js.svg" alt=""/>
                     <div class="mdui-card-header-title" translate="yes">text.js-engine</div>
                     <div class="mdui-card-header-subtitle" translate="yes">text.js-engine.description</div>
                 </div>
@@ -148,6 +149,7 @@
     </div>
     <div class="mdui-row v-space-md"></div>
     <hr/>
+    <!--  用户选择  -->
     <div class="mdui-row v-space-md"></div>
     <div class="mdui-row">
         <h2 class="content-title" translate="yes">text.servers-choice</h2>
@@ -166,13 +168,48 @@
         <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4">
             <div class="mdui-card card-bottom-gap">
                 <div class="mdui-card-primary">
-                    <div class="mdui-card-primary-title"><span id="pnx-star-count">...</span><span translate="yes">stars</span>
+                    <div class="mdui-card-primary-title"><span id="pnx-star-count">...</span><span
+                            translate="yes">stars</span>
                     </div>
                     <div class="mdui-card-primary-subtitle" translate="yes">text.on-github</div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="mdui-row v-space-md"></div>
+    <hr/>
+    <!--  赞助  -->
+    <div class="mdui-row v-space-md"></div>
+    <div id="sponsor-big-template" class="mdui-hidden">
+        <div class="mdui-col-xs-12 mdui-col-sm-4 mdui-col-md-3">
+            <div class="mdui-card card-bottom-gap">
+                <div class="mdui-card-header">
+                    <!--suppress HtmlUnknownTarget -->
+                    <img class="mdui-card-header-avatar" src="dynamic.user-icon-src" alt=""/>
+                    <div class="mdui-card-header-title">dynamic.user-name</div>
+                    <div class="mdui-card-header-subtitle">dynamic.user-donation</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="sponsor-small-template" class="mdui-hidden">
+        <div class="mdui-chip padding-chip">
+            <!--suppress HtmlUnknownTarget -->
+            <img class="mdui-chip-icon" src="dynamic.user-icon-src" alt=""/>
+            <span class="mdui-chip-title">dynamic.user-name</span>
+        </div>
+    </div>
+    <div class="mdui-row">
+        <h2 class="content-title" translate="yes">text.thanks-month-sponsors</h2>
+    </div>
+    <div class="mdui-row v-space-md"></div>
+    <div id="donating-sponsor-box" class="mdui-row flex-row"></div>
+    <div class="mdui-row v-space-md"></div>
+    <div class="mdui-row">
+        <h2 class="content-title" translate="yes">text.thanks-all-sponsors</h2>
+    </div>
+    <div class="mdui-row v-space-md"></div>
+    <div id="all-sponsor-box" class="mdui-row flex-row"></div>
     <div class="mdui-row v-space-md"></div>
     <hr/>
     <div class="mdui-row v-space-md"></div>
