--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4">
             <div class="mdui-card card-bottom-gap">
                 <div class="mdui-card-header">
-                    <img class="mdui-card-header-avatar" src="/web/assets/image/icon/high-performance.svg" alt=""/>
+                    <img class="mdui-card-header-avatar icon-no-radius" src="/web/assets/image/icon/high-performance.svg" alt=""/>
                     <div class="mdui-card-header-title" translate="yes">text.high-performance</div>
                     <div class="mdui-card-header-subtitle" translate="yes">text.high-performance.description</div>
                 </div>
@@ -99,7 +99,7 @@
         <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4">
             <div class="mdui-card card-bottom-gap">
                 <div class="mdui-card-header">
-                    <img class="mdui-card-header-avatar" src="/web/assets/image/icon/more-feature.svg" alt=""/>
+                    <img class="mdui-card-header-avatar icon-no-radius" src="/web/assets/image/icon/more-feature.svg" alt=""/>
                     <div class="mdui-card-header-title" translate="yes">text.more-feature</div>
                     <div class="mdui-card-header-subtitle" translate="yes">text.more-feature.description</div>
                 </div>
@@ -109,7 +109,7 @@
         <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4">
             <div class="mdui-card card-bottom-gap">
                 <div class="mdui-card-header">
-                    <img class="mdui-card-header-avatar" src="/web/assets/image/icon/plugin.svg" alt=""/>
+                    <img class="mdui-card-header-avatar icon-no-radius" src="/web/assets/image/icon/plugin.svg" alt=""/>
                     <div class="mdui-card-header-title" translate="yes">text.massive-plugins</div>
                     <div class="mdui-card-header-subtitle" translate="yes">text.massive-plugins.description</div>
                 </div>
@@ -119,7 +119,7 @@
         <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4">
             <div class="mdui-card card-bottom-gap">
                 <div class="mdui-card-header">
-                    <img class="mdui-card-header-avatar" src="/web/assets/image/icon/command.svg" alt=""/>
+                    <img class="mdui-card-header-avatar icon-no-radius" src="/web/assets/image/icon/command.svg" alt=""/>
                     <div class="mdui-card-header-title" translate="yes">text.vanilla-command</div>
                     <div class="mdui-card-header-subtitle" translate="yes">text.vanilla-command.description</div>
                 </div>
@@ -129,7 +129,7 @@
         <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4">
             <div class="mdui-card card-bottom-gap">
                 <div class="mdui-card-header">
-                    <img class="mdui-card-header-avatar" src="/web/assets/image/icon/js.svg" alt=""/>
+                    <img class="mdui-card-header-avatar icon-no-radius" src="/web/assets/image/icon/js.svg" alt=""/>
                     <div class="mdui-card-header-title" translate="yes">text.js-engine</div>
                     <div class="mdui-card-header-subtitle" translate="yes">text.js-engine.description</div>
                 </div>
@@ -139,7 +139,7 @@
         <div class="mdui-col-xs-12 mdui-col-sm-6 mdui-col-md-4">
             <div class="mdui-card card-bottom-gap">
                 <div class="mdui-card-header">
-                    <img class="mdui-card-header-avatar" src="/web/assets/image/icon/and-more.svg" alt=""/>
+                    <img class="mdui-card-header-avatar icon-no-radius" src="/web/assets/image/icon/and-more.svg" alt=""/>
                     <div class="mdui-card-header-title" translate="yes">text.and-more</div>
                     <div class="mdui-card-header-subtitle" translate="yes">text.and-more.description</div>
                 </div>
