--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
+<!--suppress ES6ConvertVarToLetConst -->
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?7f37dd4b818e3b908b5844e5cd197a3a";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+    })();
+</script>
 <head>
     <meta charset="UTF-8">
     <meta name="keywords" content="PowerNukkitX,Nukkit,PowerNukkit,NK,PN,PNX,Minecraft,Bedrock,mcbe,server">
