--- a/tools/jarInsight.html
+++ b/tools/jarInsight.html
@@ -18,29 +18,63 @@
     <meta name="renderer" content="webkit"/>
     <meta name="force-rendering" content="webkit"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title>PNX Jar Insight</title>
+    <title translate="yes">title</title>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/mdui/1.0.2/css/mdui.min.css"
+          crossorigin="anonymous"/>
     <script src="https://unpkg.com/java-class-tools@1.3.2/dist/java-class-tools.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.0/jszip.min.js" crossorigin="anonymous"
             referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js" crossorigin="anonymous"
             referrerpolicy="no-referrer"></script>
+    <link rel="stylesheet" href="./css/common.css"/>
 </head>
-<body>
-<h3>PNX Java字节码洞察工具</h3>
-<input type="file" id="input" name="file" accept=".class,.jar,.jmod"/>
-
-<div id="output" style="display: none;">
-    <div id="workingStatus">
-        已处理：<span id="classSum">0</span>个类， <span id="methodSum">0</span>个方法， <span id="fieldSum">0</span>个字段。
+<body class="mdui-theme-primary-indigo mdui-theme-accent-indigo mdui-appbar-with-toolbar">
+<header class="appbar mdui-appbar mdui-appbar-fixed">
+    <div class="mdui-appbar mdui-color-theme">
+        <div class="mdui-container">
+            <div class="mdui-toolbar">
+                <a href="https://www.powernukkitx.cn" class="mdui-typo-headline icon-title">
+                    <span class="icon-title-main">PN</span>
+                    <span class="icon-title-sup">X</span>
+                </a>
+                <span class="mdui-typo-title" translate="yes">title</span>
+                <div class="mdui-toolbar-spacer"></div>
+                <a href="javascript:" class="mdui-btn mdui-btn-icon" mdui-menu="{target: '#more-menu'}">
+                    <i class="mdui-icon material-icons">more_vert</i>
+                </a>
+                <ul class="mdui-menu" id="more-menu">
+                    <li class="mdui-menu-item">
+                        <a href="javascript:switchTheme()" class="mdui-ripple">
+                            <i class="mdui-menu-item-icon mdui-icon material-icons">timelapse</i>
+                            <span translate="yes">more-menu.switch-theme</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
-    <hr>
-    <div id="classFileAsDTS">
-        <button id="showDTSBtn">显示 d.ts 定义文件</button>
-        <button id="saveDTSBtn">保存 d.ts 定义文件</button>
-        <pre style="display: none"></pre>
+</header>
+<div class="mdui-container">
+    <h3 translate="yes">title</h3>
+    <input class="mdui-btn mdui-btn-raised mdui-ripple mdui-color-theme" type="file" id="input" name="file" accept=".class,.jar,.jmod"/>
+    <br>
+    <br>
+    <div id="output" style="display: none;">
+        <div id="workingStatus">
+            <span translate="yes">text.processed</span> <span id="classSum">0</span> <span translate="yes">text.classes</span>, <span id="methodSum">0</span> <span translate="yes">text.methods</span>, <span id="fieldSum">0</span> <span translate="yes">text.fields</span>
+        </div>
+        <hr>
+        <div id="classFileAsDTS">
+            <button class="mdui-btn mdui-btn-raised mdui-ripple" id="showDTSBtn" translate="yes">text.display</button>
+            <span class="v-space-md"></span>
+            <button class="mdui-btn mdui-btn-raised mdui-ripple" id="saveDTSBtn" translate="yes">text.save</button>
+            <pre style="display: none"></pre>
+        </div>
     </div>
 </div>
-
+<!-- MDUI Material设计库 -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mdui/1.0.2/js/mdui.min.js" crossorigin="anonymous"></script>
 <script src="./js/jarInsight.min.js"></script>
 </body>
 </html>
