修复发现PNX分区大量数据溢出

--- a/index.html
+++ b/index.html
@@ -253,9 +253,7 @@
                     <i class="mdui-list-item-avatar mdui-icon material-icons">more_horiz</i>
                     <div class="mdui-list-item-content">
                         <div class="mdui-list-item-title mdui-list-item-one-line" translate="yes">pnx.awesome.more</div>
-                        <div class="mdui-list-item-text mdui-list-item-one-line" translate="yes">
-                            pnx.awesome.click-to-see-more
-                        </div>
+                        <div class="mdui-list-item-text mdui-list-item-one-line" translate="yes">pnx.awesome.click-to-see-more</div>
                     </div>
                 </li>
             </ul>
