--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             <ul id="awesome-list" class="mdui-list">
                 <li class="mdui-list-item mdui-ripple" id="awesome-list-more">
                     <i class="mdui-list-item-avatar mdui-icon material-icons">more_horiz</i>
-                    <div class="mdui-list-item-content">
+                    <div class="mdui-list-item-content" onclick="refreshAwesomeList()">
                         <div class="mdui-list-item-title mdui-list-item-one-line" translate="yes">pnx.awesome.more</div>
                         <div class="mdui-list-item-text mdui-list-item-one-line" translate="yes">pnx.awesome.click-to-see-more</div>
                     </div>
