在新标签页打开BStats

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         </div>
     </div>
     <div class="mdui-row mdui-typo mdui-text-center">
-        <a class="mdui-typo-body-4-opacity" translate="yes" href="https://bstats.org/plugin/server-implementation/PowerNukkitX/16708">text.more-on-BStats</a>
+        <a class="mdui-typo-body-4-opacity" translate="yes" target="_blank" href="https://bstats.org/plugin/server-implementation/PowerNukkitX/16708">text.more-on-BStats</a>
     </div>
     <div class="mdui-row v-space-md"></div>
     <hr/>
