--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title>PowerNukkitX</title>
     <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/mdui/1.0.2/css/mdui.min.css"
+          href="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/mdui/1.0.2/css/mdui.min.css"
           crossorigin="anonymous"/>
     <link rel="stylesheet" href="/web/index/common.css"/>
 </head>
@@ -279,7 +279,7 @@
     <div class="mdui-row v-space-md"></div>
 </div>
 <!-- MDUI Material设计库 -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mdui/1.0.2/js/mdui.min.js" crossorigin="anonymous"></script>
+<script src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/mdui/1.0.2/js/mdui.min.js" crossorigin="anonymous"></script>
 <!-- PNX主页 JS库 -->
 <script src="/web/index/text.min.js"></script>
 <script src="/web/index/index.min.js"></script>
