--- a/tools/jarInsight.html
+++ b/tools/jarInsight.html
@@ -20,7 +20,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title translate="yes">title</title>
     <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/mdui/1.0.2/css/mdui.min.css"
+          href="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/mdui/1.0.2/css/mdui.min.css"
           crossorigin="anonymous"/>
     <script src="https://unpkg.com/java-class-tools@1.3.2/dist/java-class-tools.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.0/jszip.min.js" crossorigin="anonymous"
@@ -74,7 +74,7 @@
     </div>
 </div>
 <!-- MDUI Material设计库 -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mdui/1.0.2/js/mdui.min.js" crossorigin="anonymous"></script>
+<script src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/mdui/1.0.2/js/mdui.min.js" crossorigin="anonymous"></script>
 <script src="./js/jarInsight.min.js"></script>
 </body>
 </html>
